--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.1.0",
+    "@angular-devkit/build-angular": "^15.2.9",
     "@angular-eslint/builder": "^15.1.0",
     "@angular-eslint/eslint-plugin": "^15.1.0",
     "@angular-eslint/eslint-plugin-template": "^15.1.0",
@@ -41,7 +41,7 @@
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/parser": "5.37.0",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
     "eslint": "^8.23.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
